Use for loop in print_selection function.

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 73,
    "outputs": [
     {
      "data": {
-      "text/plain": "28    500 Mb/s\nName: datarate, dtype: object"
+      "text/plain": "    Unnamed: 0 sensor mode            resolution   codec sampling framerate  \\\n28          28          FF  4K UHD (3840 x 2160)  XAVC-I    4:2:2       50p   \n\n   aspect ratio bit depth  datarate   128GB file format            media type  \\\n28         16:9    10 bit  500 Mb/s  32 min         MXF  CFexpress Type A, SD   \n\n   comment  Unnamed: 12  \n28     NaN          NaN  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>sensor mode</th>\n      <th>resolution</th>\n      <th>codec</th>\n      <th>sampling</th>\n      <th>framerate</th>\n      <th>aspect ratio</th>\n      <th>bit depth</th>\n      <th>datarate</th>\n      <th>128GB</th>\n      <th>file format</th>\n      <th>media type</th>\n      <th>comment</th>\n      <th>Unnamed: 12</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>28</th>\n      <td>28</td>\n      <td>FF</td>\n      <td>4K UHD (3840 x 2160)</td>\n      <td>XAVC-I</td>\n      <td>4:2:2</td>\n      <td>50p</td>\n      <td>16:9</td>\n      <td>10 bit</td>\n      <td>500 Mb/s</td>\n      <td>32 min</td>\n      <td>MXF</td>\n      <td>CFexpress Type A, SD</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 51,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21,7 +22,32 @@
     "c = b[b['codec'] == 'XAVC-I']\n",
     "d = c[c['sampling'] == '4:2:2']\n",
     "e = d[d['framerate'] == '50p']\n",
-    "e['datarate']"
+    "e"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "9"
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = pd.read_csv('data_crawler/data/csv/fx6_database.csv')\n",
+    "options = set(a[a.columns[5]])\n",
+    "len(options)"
    ],
    "metadata": {
     "collapsed": false,
