--- a/test.ipynb
+++ b/test.ipynb
@@ -33,21 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 74,
    "outputs": [
     {
      "data": {
-      "text/plain": "9"
+      "text/plain": "0         NaN\n1         NaN\n2         NaN\n3         NaN\n4         NaN\n       ...   \n78    35 Mb/s\n79    35 Mb/s\n80    35 Mb/s\n81    35 Mb/s\n82    35 Mb/s\nName: datarate, Length: 83, dtype: object"
      },
-     "execution_count": 72,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a = pd.read_csv('data_crawler/data/csv/fx6_database.csv')\n",
-    "options = set(a[a.columns[5]])\n",
-    "len(options)"
+    "\n",
+    "a['datarate']"
    ],
    "metadata": {
     "collapsed": false,
