change the way of printing datarate in the end.

--- a/test.ipynb
+++ b/test.ipynb
@@ -33,20 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
-      "text/plain": "Index(['Unnamed: 0', 'sensor mode', 'resolution', 'codec', 'sampling',\n       'framerate', 'aspect ratio', 'bit depth', 'datarate', '128GB',\n       'file format', 'media type', 'comment', 'Unnamed: 12'],\n      dtype='object')"
+      "text/plain": "numpy.ndarray"
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a = pd.read_csv('data_crawler/data/csv/fx6_database.csv')\n",
-    "a.columns"
+    "b = a['datarate'].values\n",
+    "type(b)"
    ],
    "metadata": {
     "collapsed": false,
