准备换个思路，把所有 column 的 options 先存到一个地方，然后 loop 这些 option。

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 91,
    "outputs": [
     {
      "data": {
-      "text/plain": "    Unnamed: 0 sensor mode            resolution   codec sampling framerate  \\\n28          28          FF  4K UHD (3840 x 2160)  XAVC-I    4:2:2       50p   \n\n   aspect ratio bit depth  datarate   128GB file format            media type  \\\n28         16:9    10 bit  500 Mb/s  32 min         MXF  CFexpress Type A, SD   \n\n   comment  Unnamed: 12  \n28     NaN          NaN  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>sensor mode</th>\n      <th>resolution</th>\n      <th>codec</th>\n      <th>sampling</th>\n      <th>framerate</th>\n      <th>aspect ratio</th>\n      <th>bit depth</th>\n      <th>datarate</th>\n      <th>128GB</th>\n      <th>file format</th>\n      <th>media type</th>\n      <th>comment</th>\n      <th>Unnamed: 12</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>28</th>\n      <td>28</td>\n      <td>FF</td>\n      <td>4K UHD (3840 x 2160)</td>\n      <td>XAVC-I</td>\n      <td>4:2:2</td>\n      <td>50p</td>\n      <td>16:9</td>\n      <td>10 bit</td>\n      <td>500 Mb/s</td>\n      <td>32 min</td>\n      <td>MXF</td>\n      <td>CFexpress Type A, SD</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "{nan}"
      },
-     "execution_count": 2,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -17,12 +16,14 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "a = pd.read_csv('data_crawler/data/csv/fx6_database.csv')\n",
-    "b = a[a['resolution'] == '4K UHD (3840 x 2160)']\n",
-    "c = b[b['codec'] == 'XAVC-I']\n",
-    "d = c[c['sampling'] == '4:2:2']\n",
-    "e = d[d['framerate'] == '50p']\n",
-    "e"
+    "csv_database = pd.read_csv('data_crawler/data/csv/fx6_database.csv')\n",
+    "csv_database_res = csv_database[csv_database['resolution'] == '4K UHD (3840 x 2160)']\n",
+    "csv_database_codec = csv_database_res[csv_database_res['codec'] == 'ProRes RAW']\n",
+    "csv_database_sampling = csv_database_codec[csv_database_codec['sampling'] == '']\n",
+    "csv_database_framerate = csv_database_sampling[csv_database_sampling['framerate'] == '50p']\n",
+    "# x = v_database_framerate['datarate'].values\n",
+    "# set(csv_database.codec[csv_database.codec])\n",
+    "set(csv_database_codec['sampling'])\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -33,21 +34,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "outputs": [
     {
      "data": {
-      "text/plain": "numpy.ndarray"
+      "text/plain": "0      True\n1      True\n2      True\n3      True\n4      True\n      ...  \n78    False\n79    False\n80    False\n81    False\n82    False\nName: datarate, Length: 83, dtype: bool"
      },
-     "execution_count": 12,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = pd.read_csv('data_crawler/data/csv/fx6_database.csv')\n",
-    "b = a['datarate'].values\n",
-    "type(b)"
+    "ja = pd.read_csv('data_crawler/data/csv/fx6_database.csv')\n",
+    "b = a['datarate']\n",
+    "b.isnull()"
    ],
    "metadata": {
     "collapsed": false,
@@ -58,7 +59,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0    False\n1    False\n2     True\n3    False\ndtype: bool"
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "string_data = pd.Series(['aardvark', 'artichoke', np.nan, 'avocado'])\n",
+    "string_data.isnull()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
