还在尝试能不能利用现有逻辑把这个 function 写出来，大概率是没法了。转回 Mac mini。

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 135,
    "outputs": [
     {
      "data": {
-      "text/plain": "{nan}"
+      "text/plain": "20    True\n21    True\n22    True\n23    True\n24    True\nName: datarate, dtype: bool"
      },
-     "execution_count": 91,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21,9 +21,8 @@
     "csv_database_codec = csv_database_res[csv_database_res['codec'] == 'ProRes RAW']\n",
     "csv_database_sampling = csv_database_codec[csv_database_codec['sampling'] == '']\n",
     "csv_database_framerate = csv_database_sampling[csv_database_sampling['framerate'] == '50p']\n",
-    "# x = v_database_framerate['datarate'].values\n",
-    "# set(csv_database.codec[csv_database.codec])\n",
-    "set(csv_database_codec['sampling'])\n"
+    "\n",
+    "csv_database_codec['datarate'].isnull()\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -34,21 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 121,
    "outputs": [
     {
      "data": {
-      "text/plain": "0      True\n1      True\n2      True\n3      True\n4      True\n      ...  \n78    False\n79    False\n80    False\n81    False\n82    False\nName: datarate, Length: 83, dtype: bool"
+      "text/plain": "0     4K DCI (4096 x 2160)\n1     4K DCI (4096 x 2160)\n2     4K DCI (4096 x 2160)\n3     4K DCI (4096 x 2160)\n4     4K DCI (4096 x 2160)\n              ...         \n78        HD (1920 x 1080)\n79        HD (1920 x 1080)\n80        HD (1920 x 1080)\n81        HD (1920 x 1080)\n82        HD (1920 x 1080)\nName: resolution, Length: 83, dtype: object"
      },
-     "execution_count": 55,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ja = pd.read_csv('data_crawler/data/csv/fx6_database.csv')\n",
-    "b = a['datarate']\n",
-    "b.isnull()"
+    "import re\n",
+    "csv_database = pd.read_csv('data_crawler/data/csv/fx6_database.csv')\n",
+    "csv_database['resolution'].dropna()"
    ],
    "metadata": {
     "collapsed": false,
